footer corrected, top banner section corrected and mid portion mobile view fixed

--- a/style.css
+++ b/style.css
@@ -414,13 +414,14 @@ footer {
     } */
 
   .address .row > * {
-    padding: 2rem;
+    padding: 2rem 0.4rem;
   }
 
   .jumbotron-grey-square {
-    width: 50%;
-    height: 30%;
+    width: 20%;
+    height: 25%;
     z-index: 0;
+    border-bottom-left-radius: 10vw;
   }
 
   .banner .input-group {
@@ -449,11 +450,70 @@ footer {
   }
 
   .banner-img {
-    order: 1;    
+    order: 1;
   }
 
-  .jumbotron .col-lg-7{
-   padding-top: 2rem;
+  .jumbotron .col-lg-7 {
+    padding-top: 2rem;
+  }
+
+  .jumbotron .col-lg-5 {
+    background-color: inherit;
+    min-height:80vh
+  }
+
+  .jumbotron-grey-square {
+    /* display: none; */
+    z-index: 1;
+  }
+
+  .jumbotron-yellow {
+    width: 50%;
+    height: 50%;
+    z-index: 0;
+    background-color: #feda31;
+    z-index: 0;
+    margin-left: 50%;
+    margin-bottom: 70%;
+    position: absolute;
+    border-bottom-left-radius: 20vw;
+  }
+
+  .input-group{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .form-control{
+    width: 80vw !important;
+    text-align: center;
+    margin-left: 5%;
+    border-top-right-radius: 4px !important;
+    border-bottom-right-radius: 4px !important;
+  }
+
+  .input-group-append{
+    margin-top: 3vh;
+    margin-left: 5%;
+  }
+
+  #jumbotron-get-started{
+    width: 80vw;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    padding-left: 30%;
+
+  }
+
+  #banner-get-started{
+    width: 80vw;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    padding-left: 30%;
+  }
+
+  .clients{
+    margin-top: inherit;
   }
 
   /* Purpose section */
@@ -633,5 +693,27 @@ footer {
   .item p {
     padding: 0 1vw;
     font-size: 3.88vw;
+  }
+
+  .testimonial-title{
+    font-size: 2rem;
+    width: inherit;
+    margin: auto;
+    padding: 7.88vh 0;
+    font-weight: 400;
+  }
+
+  /* Address Section */
+  .address > div{
+    border: 1px solid #e4e4e4;
+    padding: 0 20vw;
+  }
+
+  .left-blank-div{
+    display: none !important;
+  }
+
+  .right-blank-div{
+    display: none !important;
   }
 }
